# example_app

./: .gitignore  README.md  pyproject.toml
src/example_app/: example_app.py
tests/: test_example_app.py
